# helioweb

./: .env.example  .gitignore  CfHA.ttl  Dockerfile  README.md  package.json  pyproject.toml
docs/: domain-vision-statement.md
src/helioweb/infra/: config.py  core.py
src/helioweb/ui/: main.py  util.py
src/helioweb/ui/static/css/: app.css
src/helioweb/ui/static/js/: app.js
src/helioweb/ui/static/js/components/: hk-combo-box.js
src/helioweb/ui/templates/: affil.html  author.html  base.html  concept.html  docs.html  funnel_authors.html  home.html  icon_launch.html  search.html  work.html
tests/: functional.py
