[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helioweb"
version = "0.0.1"
authors = [
  { name="Donny Winston", email="donny@polyneme.xyz" },
]
description = "HelioWeb: A resource for 21st century science"
keywords = ["SKOS", "RDF"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[all]",
    "rdflib",
    "toolz",
]

[project.urls]
"Homepage" = "https://github.com/polyneme/helioweb"
"Bug Tracker" = "https://github.com/polyneme/helioweb/issues"